--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -116,7 +116,7 @@
             </div>
           </div>
 
-          <button type="submit" class="btn">💳 Pagar matrícula y registrarse</button>
+          <button type="submit" class="btn">💳 Pagar Matrícula 100.000</button>
           <div class="register-link">
             <p>¿Ya tienes una cuenta? <a href="{% url 'usuarios:login' %}">¡Ingresa Aquí!</a></p>
           </div>  
